Removed br tags from buttons and addressed layout spacing issues.

--- a/src/stylesheets/styleguide.scss
+++ b/src/stylesheets/styleguide.scss
@@ -18,6 +18,12 @@ pre {
   border: 1px solid $gray-med;
 }
 
+.sg-buttons {
+  .sg-example {
+    margin: 20px 0px;
+  }
+}
+
 .sg-colors {
   .row {
     margin-bottom: 50px;
